# ai-earnings-calendar

./: .gitattributes  .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: daily.yml
data/: ai_companies.yaml  events.yaml  macro_events.yaml
outputs/: earnings.json  events.json
src/: __init__.py  build_ics.py  build_site.py  config.py  events_model.py  fetch_earnings.py  pipeline.py  providers.py
tests/: test_build_site.py  test_fetch_earnings.py  test_pipeline.py  test_providers.py
