[project]
name = "ai-earnings-calendar"
version = "0.1.0"
description = "Daily auto-updating web list of AI-related companies reporting earnings soon (yfinance, no API key)."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["PyYAML>=6.0", "yfinance>=0.2"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
